# timetracker

./: Cargo.toml
time-tracker-cli/: Cargo.toml
time-tracker-cli/src/: main.rs
time-tracker-egui/: Cargo.toml
time-tracker-egui/src/: main.rs
time-tracker-lib/: Cargo.toml
time-tracker-lib/src/: db.rs  elapsed.rs  error.rs  lib.rs  models.rs  ops.rs
time-tracker-tauri/: Cargo.toml  tauri.conf.json
time-tracker-tauri/frontend/: index.html
time-tracker-tauri/src/: lib.rs  main.rs
time-tracker-tui/: Cargo.toml
time-tracker-tui/src/: app.rs  highlight.rs  main.rs  render.rs
