[package]
name = "time-tracker-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "time_tracker_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tt-tauri"
path = "src/main.rs"

[dependencies]
time-tracker-lib = { path = "../time-tracker-lib" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = "2"
